syntax = "proto3";

import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package user.v1;

// The type of a member
enum UserMemberType {
  Exco = 0;
  Associate = 1;
  Affiliate = 2;
  Ordinary = 3;
  Revoked = 4;
}

message User {
  string id = 1;
  string memberId = 2;
  UserMemberType memberType = 3;
  string name = 4;
  string email = 5;
  int32 graduationYear = 6;
}

// User service
service UserService {
  // List all users, restricted to EXCO
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  };

  // Get user information by Firebase ID, restricted to authenticated users
  rpc GetUser (GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1/users/{firebaseId}"
    };
  };

  // Bind user to a Firebase ID
  rpc BindUser (BindUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/users/{id}/bind"
    };
  };
  
  // Create users
  rpc CreateUser (CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/users"
    };
  }

  // Batch create users
  rpc BatchCreateUsers (BatchCreateUsersRequest) returns (BatchCreateUsersResponse) {
    option (google.api.http) = {
      post: "/v1/users:batchCreate"
      body: "*"
    };
  }

  // Update user
  rpc UpdateUser (UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/v1/users/{user.id}"
      body: "user"
    };
  }

  // Delete user
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/users/{id}"
    };
  }
}

message ListUsersRequest {
  int32 pageSize = 1;
  string pageToken = 2;
}

message ListUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string firebaseId = 1;
}

message BindUserRequest {
  string id = 1;
  string firebaseId = 2;
}

message CreateUserRequest {
  User user = 1;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  User user = 1;
  google.protobuf.FieldMask updateMask = 2;
}

message DeleteUserRequest {
  string id = 1;
}
